Hyperlink DOIs to preferred resolver

--- a/papis-html/papis_html/data/index.html
+++ b/papis-html/papis_html/data/index.html
@@ -112,7 +112,7 @@
         <span class="if year"><span class="year"></span>.</span>
         <span class="if note"><span class="note"></span></span>
         <span class="if url"><a href="+url+" extra="url"  class="bibtexVar note">url</a></span>
-        <span class="if doi"><a href="http://dx.doi.org/+doi+" extra="doi"  class="bibtexVar doi">doi</a></span>
+        <span class="if doi"><a href="https://doi.org/+doi+" extra="doi"  class="bibtexVar doi">doi</a></span>
         <a class="bibtexVar" role="button" data-toggle="collapse" href="#bib+BIBTEXKEY+" aria-expanded="false" aria-controls="bib+BIBTEXKEY+" extra="BIBTEXKEY">
       [bib]
     </a>
